# GenUI

./: .gitignore  AI_AGENT_DOCUMENTATION.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  editor_autocomplete.py  main.py  pyproject.toml  requirements.txt  ruff.toml  settings.py  trivy.yaml  utils.py  worker.py  workflows.py  ws_api.py
docs/: compel-improvements.md  prompt-syntax-guide.md  settings.md
generator/: sdxl.py
src/adetailer_sdxl/: requirements.txt
src/adetailer_sdxl/asdff/: base.py
src/genui/: main.py  operations.py  process_manager.py  settings.py  test_operations.py  test_process_manager.py  utils.py  worker.py
src/genui/common/: metadata.py  trace.py
src/genui/generator/: sdxl.py
src/genui/generator/sdxl/: __init__.py  loras.py  pipelines.py  schedulers.py  utils.py
src/genui/process_manager/: example_usage.py  process_manager.py
src/genui/process_manager_old/: __init__.py  image_processor.py  task_processor.py
src/genui/resources/: autocomplete.txt
src/genui/tests/: test_highlight.py
src/genui/ui_widgets/: editor_autocomplete.py  lora_table.py  photo_viewer.py
src/genui/ui_widgets/window_mixins/: generation_command.py  image_size.py  prompt.py  propagate_events.py  scheduler.py  seed.py  status_bar.py  system_monitor.py
ui_widgets/: editor_autocomplete.py  photo_viewer.py
ui_widgets/window_mixins/: generation_command.py  image_size.py  scheduler.py  seed.py  status_bar.py
