[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "genui"
authors = [{ name = "Nikolay Volkov", email = "freezemandix@ya.ru" }]
description = """
Desktop UI application designed to simplify and enhance the process of
generating images using Stable Diffusion.
"""
readme = "README.md"
requires-python = ">=3.10, <3.12"
keywords = ["AI", "Stable Diffusion"]
license = { text = "Apache-2.0" }
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "PyQt6",
    "pillow",
    "diffusers >= 0.12.0",
    "torch >= 2.5.1",
    "transformers",
    "accelerate >= 0.17.0",
    "invisible-watermark >= 0.2.0",
    "DeepCache",
    "compel >= 2.2.0",
    "pydantic-settings[toml]",
    #    "xformers >= 0.0.29.post1",
    "platformdirs",
    "torchvision >= 0.15.1",
    "ultralytics >= 8.2.32",
    "pyexiv2",
    "peft>=0.15.1",
    "torchsde>=0.2.6",
    "psutil",
    "opencv-python-headless",
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/genui/__version__.py"


[project.urls]
Homepage = "https://github.com/FRiMN/GenUI"
Issues = "https://github.com/FRiMN/GenUI/issues"

[project.scripts]
genui = "genui.main:main"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "pytest>=8.4.2",
]
#torchvision = [
#  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
#]
