[project]
name = "genui"
authors = [{ name = "Nikolay Volkov", email = "freezemandix@ya.ru" }]
description = """
Desktop UI application designed to simplify and enhance the process of
generating images using Stable Diffusion.
"""
readme = "README.md"
# requires-python = ">=3.10, <3.12"
requires-python = ">=3.10"
keywords = ["AI", "Stable Diffusion"]
license = { text = "Apache-2.0" }
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "PyQt6",
    "pillow",
    "diffusers[torch] >= 0.19.3",
    "torch >= 2.8.0",
    "transformers >= 4.36.0",
    "accelerate >= 0.17.0",
    "invisible-watermark >= 0.2.0",
    "DeepCache",
    "compel >= 2.3.1",
    "pydantic-settings[toml]",
    #    "xformers >= 0.0.29.post1",
    "platformdirs",
    "torchvision >= 0.15.1",
    "ultralytics >= 8.2.32",
    "pyexiv2",
    "peft >= 0.15.1",
    "torchsde >= 0.2.6",
    "psutil",
    "opencv-python-headless",
    # "hidiffusion",
    # "triton >= 2.1.0",
    # "optimum[onnxruntime]",
    # "onnx",
    # "onnxruntime-gpu",
    # "pruna[full]",
    # Only security (not used directly):
    "jinja2 >= 3.1.6",
    "fonttools >= 4.60.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/FRiMN/GenUI"
Issues = "https://github.com/FRiMN/GenUI/issues"

[project.scripts]
genui = "genui.main:main"

[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/genui/__version__.py"

# [[tool.uv.index]]
# name = "pytorch-cu124"
# url = "https://download.pytorch.org/whl/cu124"
# explicit = true

[tool.uv.pip]
index-url = "https://download.pytorch.org/whl/cu124"
extra-index-url = ["https://pypi.org/simple"]

# [[tool.uv.index]]
# name = "oneflow"
# url = "https://github.com/siliconflow/oneflow_releases/releases/expanded_assets/community_cu121"
# explicit = true

# [tool.uv.sources]
# torch = [
#     { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
# ]
#torchvision = [
#  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
#]

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "pytest>=8.4.2",
    "pip-audit",
]
